# GateServer

./: .gitignore  CMakeLists.txt  CServer.cpp  CServer.h  GateServer.cpp  GateServer架构分析.md  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySqlDao.cpp  MySqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RPConPool.cpp  RPConPool.h  RedisConPool.cpp  RedisMgr.cpp  StatusConPool.cpp  StatusConPool.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.json  const.h  redis_audit_report.md  utils.cpp  utils.h
VerifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
proto/: message.proto
src/: CMakeLists.txt
src/app/: CMakeLists.txt  GateServer.cpp
src/application/: CMakeLists.txt  LogicSystem.cpp  LogicSystem.h
src/application/common/: JsonUtil.cpp  JsonUtil.h
src/application/controller/: UserController.cpp  UserController.h  VerifyController.cpp  VerifyController.h
src/application/impl/: GateService.cpp  GateService.h  JsonUtil.cpp  LogicSystemImpl.cpp  LogicSystemImpl.h  UserControllerImpl.cpp  UserControllerImpl.h  UserDaoImpl.cpp  UserDaoImpl.h  UserServiceImpl.cpp  UserServiceImpl.h  VerifyControllerImpl.cpp  VerifyControllerImpl.h  VerifyServiceImpl.cpp  VerifyServiceImpl.h
src/application/interface/: IStatusRpcClient.h  IUserCache.h  IUserDao.h  IVerifyCodeCache.h  IVerifyRpcClient.h  LogicSystem.h  StatusRpcClient.h  StatusRpcClientAdapter.cpp  StatusRpcClientAdapter.h  StatusRpcClientImpl.h  UserCache.h  UserCacheAdapter.cpp  UserCacheAdapter.h  UserCacheImpl.cpp  UserCacheImpl.h  UserController.h  UserDao.h  UserDaoAdapter.cpp  UserDaoAdapter.h  UserDaoImpl.cpp  UserDaoImpl.h  UserService.h  VerifyCodeCache.h  VerifyCodeCacheAdapter.cpp  VerifyCodeCacheAdapter.h  VerifyCodeCacheImpl.cpp  VerifyCodeCacheImpl.h  VerifyController.h  VerifyRpcClient.h  VerifyRpcClientAdapter.cpp  VerifyRpcClientAdapter.h  VerifyRpcClientImpl.cpp  VerifyService.h
src/common/: CMakeLists.txt  LOG.md  Log.h  Singleton.h  utils.cpp  utils.h
src/common/constants/: business_constants.h  error_codes.h  redis_keys.h
src/common/utils/: defer.h  json_util.cpp  json_util.h  utils.cpp  utils.h
src/domain/: CMakeLists.txt  error_codes.h
src/infra/: CMakeLists.txt
src/infra/base/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ThreadPoolMgr.cpp  ThreadPoolMgr.h
src/infra/config/: CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h
src/infra/grpc/: CMakeLists.txt  GateService.cpp  GateService.h  RPConPool.cpp  RPConPool.h  StatusConPool.cpp  StatusConPool.h  StatusGrpcClient.cpp  StatusGrpcClient.h  StatusRpcClientImpl.cpp  StatusRpcClientImpl.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  VerifyRpcClientImpl.h
src/infra/log/: CMakeLists.txt  Log.cpp  Log.h  LogModule.h
src/infra/mysql/: CMakeLists.txt  DbSession.h  MySqlDao.cpp  MySqlDao.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  MysqlMgr.cpp  MysqlMgr.h  UserDaoImpl.cpp  UserDaoImpl.h
src/infra/net/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h
src/infra/redis/: CMakeLists.txt  RedisConPool.cpp  RedisMgr.cpp  RedisMgr.h  RedisSession.h  UserCacheImpl.cpp  UserCacheImpl.h  VerifyCodeCacheImpl.cpp
src/net/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  http_types.h
tests/: CMakeLists.txt  test_logic_system.cpp  test_utils.cpp
tools/verify-server/: NOTE.txt  const.js  proto.js  server.js
